refactor: Replace class-based DTOs with records
feat: Return 201 Created status for adding new car and driver

fix: Use Boolean instead of boolean to fix mapping of the isDeleted field